# litecask

./: .clang-format  .clang-tidy  .cmake-format.py  .codechecker_cfg  .codechecker_skip  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
apps/: CMakeLists.txt
apps/tool/: CMakeLists.txt  README.md  main.cpp
ci/: README.md  benchmark.py  codechecker.py  format.py  iwyu.imp  iwyu.py  tidy.py  tsan_suppression.supp
lib/: CMakeLists.txt  README.md  litecask.h
lib/ut/: CMakeLists.txt  README.md  test_basic.cpp  test_benchmark.cpp  test_cache.cpp  test_index.cpp  test_keydir.cpp  test_main.cpp  test_main.h  test_malloc.cpp  test_threading.cpp  test_ttl.cpp
